Remake tampilan landing page dan dashboard dengan menyesuaikan mockup

--- a/about/templates/base.html
+++ b/about/templates/base.html
@@ -24,10 +24,6 @@
             </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 
@@ -39,7 +35,7 @@
     <!-- Copyright -->
     <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2023 Copyright:
-      <a class="text-white" href="https://mdbootstrap.com/">SIMKSPP7</a>
+      <a class="text-white" href="{% url 'blog' %}">SIMKSPP7</a>
     </div>
     <!-- Copyright -->
   </footer>
