--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -11,10 +11,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="{% url 'index' %}">Home </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="{% url 'blog' %}">About Us</a>
+                <a class="nav-link" href="{% url 'blog' %}">About Us<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'contact' %}">Contact</a>
@@ -24,10 +24,6 @@
             </li>
 
         </ul>
-        <form class="form-inline my-2 my-lg-0">
-            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
-        </form>
     </div>
 </nav>
 
