--- a/contact/templates/contact.html
+++ b/contact/templates/contact.html
@@ -12,10 +12,10 @@
 <section class="mb-4">
 
     <!--Section heading-->
-    <h2 class="h1-responsive font-weight-bold text-center my-4">Contact us</h2>
+    <h2 class="h1-responsive font-weight-bold text-center my-4">Hubungi Kami</h2>
     <!--Section description-->
-    <p class="text-center w-responsive mx-auto mb-5">Do you have any questions? Please do not hesitate to contact us directly. Our team will come back to you within
-        a matter of hours to help you.</p>
+    <p class="text-center w-responsive mx-auto mb-5">Apakah Anda memiliki pertanyaan? Jangan ragu untuk menghubungi kami secara langsung. 
+        Tim kami akan menghubungi Anda kembali dalam hitungan jam untuk membantu Anda</p>
 
     <div class="row">
 
@@ -28,9 +28,9 @@
 
                     <!--Grid column-->
                     <div class="col-md-6">
-                        <div class="md-form mb-0">
-                            <input type="text" id="name" name="name" class="form-control">
+                        <div class="md-form mb-0">                           
                             <label for="name" class="">Your name</label>
+                            <input type="text" id="name" name="name" class="form-control">
                         </div>
                     </div>
                     <!--Grid column-->
@@ -38,8 +38,9 @@
                     <!--Grid column-->
                     <div class="col-md-6">
                         <div class="md-form mb-0">
-                            <input type="text" id="email" name="email" class="form-control">
+                            
                             <label for="email" class="">Your email</label>
+                            <input type="text" id="email" name="email" class="form-control">
                         </div>
                     </div>
                     <!--Grid column-->
@@ -50,9 +51,9 @@
                 <!--Grid row-->
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="md-form mb-0">
-                            <input type="text" id="subject" name="subject" class="form-control">
+                        <div class="md-form mb-0">                            
                             <label for="subject" class="">Subject</label>
+                            <input type="text" id="subject" name="subject" class="form-control">
                         </div>
                     </div>
                 </div>
@@ -65,8 +66,9 @@
                     <div class="col-md-12">
 
                         <div class="md-form">
-                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
+                            
                             <label for="message">Your message</label>
+                            <textarea type="text" id="message" name="message" rows="2" class="form-control md-textarea"></textarea>
                         </div>
 
                     </div>
@@ -86,15 +88,15 @@
         <div class="col-md-3 text-center">
             <ul class="list-unstyled mb-0">
                 <li><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>San Francisco, CA 94126, USA</p>
+                    <p>Kalasan, Sleman, Yogyakarta</p>
                 </li>
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
-                    <p>+ 01 234 567 89</p>
+                    <p>081328676603</p>
                 </li>
 
                 <li><i class="fas fa-envelope mt-4 fa-2x"></i>
-                    <p>contact@mdbootstrap.com</p>
+                    <p>angelinalaowo@gmail.com</p>
                 </li>
             </ul>
         </div>
