--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -217,9 +217,9 @@
 
                     <!-- Page Heading -->
                     <div class="d-sm-flex align-items-center justify-content-between mb-4">
-                        <h1 class="h3 mb-0 text-gray-800">Dashboard</h1>
+                        <h1 class="h3 mb-0 text-gray-800">DASHBOARD</h1>
                         <a href="#" class="d-none d-sm-inline-block btn btn-sm btn-primary shadow-sm"><i
-                                class="fas fa-download fa-sm text-white-50"></i> Generate Report</a>
+                                class="fas fa-download fa-sm text-white-50"></i> Report</a>
                     </div>
 
                     <!-- Content Row -->
@@ -236,8 +236,10 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Rp.-,</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-calendar fa-2x text-gray-300"></i>
+                                            <i class="fas fa-coins fa-2x text-gray-300"></i>
                                         </div>
+                                        
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -254,8 +256,9 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">Rp.-,</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-dollar-sign fa-2x text-gray-300"></i>
+                                            <i class="fas fa-hand-holding-usd fa-2x text-gray-300"></i>
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -276,8 +279,9 @@
                                             </div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-clipboard-list fa-2x text-gray-300"></i>
+                                            <i class="fas fa-credit-card fa-2x text-gray-300"></i>
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </div>
@@ -294,8 +298,9 @@
                                             <div class="h5 mb-0 font-weight-bold text-gray-800">-,</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-comments fa-2x text-gray-300"></i>
+                                            <i class="fas fa-users fa-2x text-gray-300"></i>
                                         </div>
+                                        
                                     </div>
                                 </div>
                             </div>
