--- a/anggota/templates/master-anggota.html
+++ b/anggota/templates/master-anggota.html
@@ -1,46 +1,90 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css"
+        integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <title>Data Anggota</title>
+    <style>
+        thead {
+            background-color: dodgerblue;
+        }
+
+        body {
+            height: 100%;
+        }
+    </style>
 </head>
+
 <body>
-    <table>
-        <thead>
-            <tr>
-                <th>ID ANGGOTA</th>
-                <th>NAMA ANGGOTA</th>
-                <th>NIK</th>
-                <th>Tanggal Lahir</th>
-                <th>Agama</th>
-                <th>No.HP</th>
-                <th>No.Telp</th>
-                <th>Pekerjaan</th>
-                <th>Alamat</th>
-                <th>Email</th>
-                <th>ACTIONS</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for anggota in data_anggota %}
-            <tr>
-                <td>{{ anggota.kode_Anggota }}</td>
-                <td>{{ anggota.Nama_Anggota }}</td>
-                <td>{{ anggota.Nomor_Induk_Kependudukan}}</td>
-                <td>{{ anggota.Tgl_Lahir}}</td>
-                <td>{{anggota.Agama}}</td>
-                <td>{{ anggota.No_Hp}}</td>
-                <td>{{ anggota.No_Telp_Rumah}}</td>
-                <td>{{ anggota.Pekerjaan}}</td>
-                <td>{{ anggota.Alamat}}</td>
-                <td>{{ anggota.Email}}</td>
-                <td>
-                    <a href="{% url 'update_anggota' anggota.kode_Anggota %}">UPDATE</a>
-                </td>
-            </tr>
-            {% endfor %}
-        </tbody>
-    </table>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-11 mx-auto">
+                    {% if messages %}
+                    {% for message in messages %}
+                    <p>{{ message }}</p>
+                    {% endfor %}
+                    {% endif %}
+
+                    <a href="{% url 'tambahAnggota' %}" class="btn btn-primary mb-2 mt-2">TAMBAH ANGGOTA</a>
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead class="thead-info">
+                                <tr>
+                                    <th class="text-center" scope="col">ID ANGGOTA</th>
+                                    <th class="text-center" scope="col">NAMA ANGGOTA</th>
+                                    <th class="text-center" scope="col">NIK</th>
+                                    <th class="text-center" scope="col">Tanggal Lahir</th>
+                                    <th class="text-center" scope="col">Agama</th>
+                                    <th class="text-center" scope="col">No.HP</th>
+                                    <th class="text-center" scope="col">No.Telp</th>
+                                    <th class="text-center" scope="col">Pekerjaan</th>
+                                    <th class="text-center" scope="col">Alamat</th>
+                                    <th class="text-center" scope="col">Email</th>
+                                    <th class="text-center" scope="col">ACTIONS</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for anggota in data_anggota %}
+                                <tr>
+                                    <td>{{ anggota.kode_Anggota }}</td>
+                                    <td>{{ anggota.Nama_Anggota }}</td>
+                                    <td>{{ anggota.Nomor_Induk_Kependudukan}}</td>
+                                    <td>{{ anggota.Tgl_Lahir}}</td>
+                                    <td>{{anggota.Agama}}</td>
+                                    <td>{{ anggota.No_Hp}}</td>
+                                    <td>{{ anggota.No_Telp_Rumah}}</td>
+                                    <td>{{ anggota.Pekerjaan}}</td>
+                                    <td>{{ anggota.Alamat}}</td>
+                                    <td>{{ anggota.Email}}</td>
+                                    <td>
+                                        <a href="{% url 'update_anggota' anggota.kode_Anggota %}">UPDATE</a>
+                                        <a onclick="return confirm('Apakah Anda Yakin Ingin Menghapus Anggota Dengan ID Anggota = {{anggota.kode_Anggota}}')" href="{% url 'deleteanggota' anggota.kode_Anggota %}">DELETE</a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                        <div class="row justify-content-end">
+                            <div class="col-auto">
+                                <a class="btn btn-success" href="{% url 'dashboard' %}">KEMBALI</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 </body>
+
 </html>
+<script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+    crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Fy6S3B9q64WdZWQUiU+q4/2Lc9npb8tCaSX9FK7E8HnRr0Jz8D6OP9dO5Vg3Q9ct"
+    crossorigin="anonymous"></script>
