--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -59,7 +59,7 @@
             </li>
 
             <li class="nav-item active">
-                <a class="nav-link" href="{% url 'anggota' %}">
+                <a class="nav-link" href="{% url 'masteranggota' %}">
                     <i class="fas fa-fw fa-users"></i>
                     <span>Anggota</span>
                 </a>
