--- a/login/templates/login/base.html
+++ b/login/templates/login/base.html
@@ -9,7 +9,7 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
+        <ul class="navbar-nav ml-auto">
             <li class="nav-item active">
                 <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
             </li>
@@ -22,14 +22,13 @@
             <li class="nav-item">
                 <a class="nav-link" href="{% url 'login' %}">Login</a>
             </li>
-
         </ul>
     </div>
 </nav>
 
-{%block content%}
+{% block content %}
 
-{%endblock content%}
+{% endblock content %}
 
 <script src="{% static 'bootstrap/jquery/slim.min.js'%}"
     integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
