--- a/login/templates/login/login_view.html
+++ b/login/templates/login/login_view.html
@@ -1,18 +1,52 @@
-{%extends "login/base.html" %}
+{% extends "login/base.html" %}
+{% load static %}
 <!DOCTYPE html>
 
 <head>
     <title>SIM KSP</title>
+    <style>
+        /* Tambahkan gaya CSS kustom di sini jika diperlukan */
+        .h-custom {
+            /* Sesuaikan tinggi sesuai kebutuhan */
+            height: 100vh;
+        }
+
+        /* Tambahkan media query untuk tampilan seluler */
+        @media (max-width: 768px) {
+            .h-custom {
+                height: auto;
+            }
+
+            /* Atur gambar di atas formulir dan tengah-tengah */
+            .row.d-flex.justify-content-center.align-items-center.h-100 {
+                flex-direction: column-reverse; /* Kolom sebaliknya di tampilan seluler */
+            }
+
+            .col-md-9.col-lg-6.col-xl-5 {
+                order: 2; /* Pindahkan gambar ke bawah di tampilan seluler */
+                text-align: center; /* Pusatkan gambar */
+            }
+
+            .col-md-8.col-lg-6.col-xl-4.offset-xl-1 {
+                order: 1; /* Pindahkan formulir ke atas di tampilan seluler */
+                text-align: center; /* Pusatkan formulir */
+            }
+
+            /* Tambahkan gaya agar gambar berada di tengah atas */
+            .col-md-9.col-lg-6.col-xl-5 img {
+                margin-bottom: 1rem;
+            }
+        }
+    </style>
 </head>
 
 <body>
-    {%block content%}
+    {% block content %}
     <section class="vh-100">
         <div class="container-fluid h-custom">
             <div class="row d-flex justify-content-center align-items-center h-100">
                 <div class="col-md-9 col-lg-6 col-xl-5">
-                    <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-login-form/draw2.webp"
-                        class="img-fluid" alt="Sample image">
+                    <img src="{% static 'img/logo-koperasi-13101.png' %}" class="img-fluid" alt="Sample image">
                 </div>
                 <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
                     <form class="user" action="" method="POST">
@@ -21,14 +55,12 @@
                         <div class="form-outline mb-4">
                             <label class="form-label" for="username">Username</label>
                             {{ form.username }}
-
                         </div>
 
                         <!-- Password input -->
                         <div class="form-outline mb-3">
                             <label class="form-label" for="password">Password</label>
                             {{ form.password }}
-                            
                         </div>
 
                         <div class="d-flex justify-content-between align-items-center">
@@ -46,23 +78,18 @@
                             <button type="submit" value="login" name="submit" class="btn btn-primary btn-lg"
                                 style="padding-left: 2.5rem; padding-right: 2.5rem;">Login</button>
                         </div>
-
                     </form>
                 </div>
             </div>
         </div>
-        <div
-            class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+        <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
             <!-- Copyright -->
             <div class="text-white mb-3 mb-md-0">
                 Copyright © 2020. All rights reserved.
             </div>
-            <!-- Copyright -->
-
-         
         </div>
     </section>
-    {%endblock content%}
+    {% endblock content %}
 </body>
 
 </html>
