merubah tampilan pada landing page dan memisahkan agar about us tidak terkait dengan home

--- a/about/templates/base.html
+++ b/about/templates/base.html
@@ -11,7 +11,7 @@
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
         body {
-            background: url("{% static 'img/Home.jpg' %}") no-repeat center center fixed;
+            background: url("{% static 'img/Home.png' %}") no-repeat center center fixed;
             background-size: cover;
             margin: 0;
             padding: 0;
