--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -9,22 +9,21 @@
     </button>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item ">
-                <a class="nav-link" href="{% url 'index' %}">Home </a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{% url 'blog' %}">About Us<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'contact' %}">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{% url 'login' %}">Login</a>
-            </li>
-
-        </ul>
-    </div>
+      <ul class="navbar-nav ml-auto"> <!-- Menggunakan class ml-auto di sini -->
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'index' %}">Home</a>
+          </li>
+          <li class="nav-item active">
+              <a class="nav-link" href="{% url 'blog' %}">About Us<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'contact' %}">Contact</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="{% url 'login' %}">Login</a>
+          </li>
+      </ul>
+  </div>
 </nav>
 
 {%block content%}
