Membuat CRUD pada menu Simpan (Done)

--- a/dashboard/templates/dashboard/base.html
+++ b/dashboard/templates/dashboard/base.html
@@ -80,7 +80,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <h6 class="collapse-header">Jenis Transaksi :</h6>
-                        <a class="collapse-item" href="#">Simpan</a>
+                        <a class="collapse-item" href="{% url 'simpan' %}">Simpan</a>
                         <a class="collapse-item" href="{% url 'pinjam' %}">Pinjam</a>
                         <a class="collapse-item" href="utilities-animation.html">Angsuran</a>
                     </div>
